--- a/src/components/ParentDashboard/ParentDashboard.css
+++ b/src/components/ParentDashboard/ParentDashboard.css
@@ -8,8 +8,8 @@ font-family: 'Electrolize', sans-serif; */
 .parent_dashboard{
     align-items: center;
     width: 100%;
-    height: 100vh;
-    /* padding-top: 15vh; */
+    height: 88vh;
+    padding-top: 12vh;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -319,7 +319,7 @@ color: rgb(255, 217, 0); /* yellow */
 @media screen and (min-width:580px){
 
   .house_card{
-    width: 80%;
+    width: 300px;
   }
 
   .parent_dashboard-feedback {
@@ -328,7 +328,7 @@ color: rgb(255, 217, 0); /* yellow */
   .edit-input-field {
   width:350px;
   margin: auto;
-}
+  }
 }
 @media screen and (min-width:800px) {
 
